--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,6 +8,7 @@
     top:0;
     transition: all 300ms ease;
     background-color:  #F8F7F1;
+    
 
     .container{
         position: relative;
@@ -21,6 +22,35 @@
         }
 
         .menu{
+
+            .nav{
+                cursor: pointer;
+                color: red; 
+                visibility: visible;
+                opacity: 1;
+                transition: all 0.3s ease;
+                display: block;
+
+                &:hover{
+
+                        background: #9bce97;
+                        color: white;
+
+                }
+
+                span{
+
+                    display: block;
+                    
+                &:hover{
+
+                    color: white;
+
+                }
+                   
+                }
+
+            }
 
             @media (max-width: $md) {
                 position: absolute;
@@ -43,21 +73,66 @@
                 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
             }
 
-            text-transform: uppercase;
+            // text-transform: uppercase;
             font-size: 1rem;
             list-style: none;
-            gap: 1.5rem;
+            gap: 1rem;
             cursor: pointer;
             
             li{
+
+                &:hover .dropDown{
+                    visibility: visible;
+                    display: block;
+                    top: 56px;
+                    transition: all 0.9s ease;
+
+
+                }
                 a{
                     color: inherit;
                     text-decoration: none;
+
+                    
                 }
 
-                &:hover{
-                    color: $secondary;
+             
+
+                .dropDown{
+                    background: #9bce97;
+                    top: 56px;
+                    width: 400px;
+                    line-height: 45px;
+                    position: absolute;
+                    // opacity: 0;
+                    visibility: hidden;
+
+                   
+
+                   li {
+
+                    width: 100%;
+                    display: block;
+                    list-style: none;
+                    border-bottom: 2px solid rgb(208, 243, 213);
+
+                    a{
+                      display: block;  
+                      padding: 0 0 0 20px;
+                      border-radius: 0px;
+                      color: white;
+
+
+                      &:hover{
+                        color: #9bce97;
+                        background: white;
+                      }
+                    }
+
+                   }
                 }
+
+                
 
                 
             }
