--- a/src/components/VACourses/VA1Programme/VA1Programme.module.scss
+++ b/src/components/VACourses/VA1Programme/VA1Programme.module.scss
@@ -10,7 +10,7 @@
 
         .heading{
             flex-direction: column;
-            margin-bottom: 1rem;
+            margin-bottom: 2rem;
 
            
         }
@@ -66,6 +66,7 @@
                         padding: 0px;
                     }
                     padding: 1rem 4rem;
+                    line-height: 1.5rem;
                 }
               
             }
@@ -76,6 +77,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            background: green;
 
             img{
 
