--- a/src/components/VACourses/VA1Programme/VA1Programme.module.scss
+++ b/src/components/VACourses/VA1Programme/VA1Programme.module.scss
@@ -66,7 +66,7 @@
                         padding: 0px;
                     }
                     padding: 1rem 4rem;
-                    line-height: 1.5rem;
+                    line-height: 1.7rem;
                 }
               
             }
@@ -77,7 +77,10 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: green;
+            border: 4px solid rgb(219, 219, 219);
+            padding: 0px 10px;
+            border-radius: 10px;
+            // background: green;
 
             img{
 
